Fixed bluebox to show relative to document not window. it is not responsive to the scrolling.

--- a/client/styles/photoGallery.css
+++ b/client/styles/photoGallery.css
@@ -1,5 +1,5 @@
 :local .photoGallery {
-  width: 85vmin;
+  width: 70vmin;
   display: flex;
 
 }
